Code for setting HTML code for menu items

--- a/intex.html
+++ b/intex.html
@@ -19,19 +19,81 @@
 <body>
     <script src="main.js"></script>
     <!--Start Of Header View-->
-    <header>
-        <div class="wrapper">
-            <nav>
-                <div class="logo">Logo</div>
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Our Work</a></li>
-                    <li><a href="#" class="btn dark">Enrol Now</a></li>
-                </ul>
-            </nav>
+    <div class="group-278">
+        <div class="group-267">
+            <!--header navigation section-->
+            <div>
+                <header class="header">
+                    <div class="header__top-row">
+                        <img src="/images/Logo.svg" alt="Header Logo" class="header__logo" />
+                        <div class="heaer-actions">
+                            <p class="header__signup ui text size-textxs">Sign UP |</p>
+                            <button class="header__login-button ui button gray_500 size-xs fill">Login</button>
+                            <img src="/images/edgeLogo.svg" alt="Logo 24 1" class="header__user-icon" />
+                        </div>
+                    </div>
+                    <div class="header__main-nav">
+                        <div class="header__nav-row container-xs">
+                            <ul class="header__nav-menu">
+                                <li>
+                                    <a href="#">
+                                        <div class="header__menu-item">
+                                            <p class="header__menu-link ui heading size-headingxs">Home</p>
+                                            <div class="header__menu-indicator"></div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p class="header__menu-link ui text size-textxs">Gallery</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p class="header__menu-link ui text size-textxs">Offer & Promotions</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p class="header__menu-link ui text size-textxs">Webinar & Workshopes</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p class="header__menu-link ui text size-textxs">Register your product</p>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <p class="header__menu-link ui text size-textxs">Know your Warranty</p>
+                                    </a>
+                                </li>
+                                <li class="dhi-group">
+                                    <div class="header__submenu">
+                                        <p class="header__submenu-link ui text sixe-textxs">Services</p>
+                                        <img src="/images/arrowDown.svg" alt="Arrow Down" class="header__submenu-icon">
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </header>
+            </div>
         </div>
-    </header>
+        </div.group-267>
+        <header>
+            <div class="wrapper">
+                <nav>
+                    <div class="logo">Logo</div>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Our Work</a></li>
+                        <li><a href="#" class="btn dark">Enrol Now</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
 </body>
 
