Applying CSS for Menu Items

--- a/intex.html
+++ b/intex.html
@@ -18,10 +18,9 @@
 
 <body>
     <script src="main.js"></script>
-    <!--Start Of Header View-->
     <div class="group-278">
         <div class="group-267">
-            <!--header navigation section-->
+            <!--header navigation section started-->
             <div>
                 <header class="header">
                     <div class="header__top-row">
@@ -73,6 +72,63 @@
                                         <p class="header__submenu-link ui text sixe-textxs">Services</p>
                                         <img src="/images/arrowDown.svg" alt="Arrow Down" class="header__submenu-icon">
                                     </div>
+                                    <div class="dhi-group-1">
+                                        <div class="menu-container">
+                                            <div class="menu-group">
+                                                <div class="menu">
+                                                    <p class="mega-menu__title ui text">Title 1</p>
+                                                    <div class="menu-column">
+                                                        <a href="#">
+                                                            <p class="mega-menu__text ui text">Menu 1</p>
+                                                        </a>
+                                                        <a href="#" class="menu-link">
+                                                            <p class="mega-menu__text ui text">Menu 2</p>
+                                                        </a>
+                                                        <a href="#" class="menu-link">
+                                                            <p class="mega-menu__text ui text">Menu 3</p>
+                                                        </a>
+                                                        <a href="#" class="menu-link">
+                                                            <p class="mega-menu__text ui text">Menu 4</p>
+                                                        </a>
+                                                        <a href="#" class="menu-link">
+                                                            <p class="mega-menu__text ui text">Menu 5</p>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                                <div class="menu">
+                                                    <p class="mega-menu__title ui text">Title 2</p>
+                                                    <div class="menu-column">
+                                                        <a href="#">
+                                                            <p class="mega-menu__text ui text">Menu 1</p>
+                                                        </a>
+                                                        <p class="mega-menu__link ui text">Menu 2</p>
+                                                        <p class="mega-menu__link ui text">Menu 3</p>
+                                                        <p class="mega-menu__link ui text">Menu 4</p>
+                                                        <a href="#" class="menu-link">
+                                                            <p class="mega-menu__text ui text">Menu 5</p>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                                <div class="menu">
+                                                    <p class="mega-menu__title ui text">Title 3</p>
+                                                    <div class="menu-column">
+                                                        <a href="#">
+                                                            <p class="mega-menu__text ui text">Menu 1</p>
+                                                        </a>
+                                                        <a href="#" class="menu-link">
+                                                            <p class="mega-menu__text ui text">Menu 2</p>
+                                                        </a>
+                                                        <a href="#" class="menu-link">
+                                                            <p class="mega-menu__text ui text">Menu 3</p>
+                                                        </a>
+                                                        <a href="#" class="menu-link">
+                                                            <p class="mega-menu__text ui text">Menu 4</p>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
@@ -80,21 +136,8 @@
                 </header>
             </div>
         </div>
-        </div.group-267>
-        <header>
-            <div class="wrapper">
-                <nav>
-                    <div class="logo">Logo</div>
-                    <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Our Work</a></li>
-                        <li><a href="#" class="btn dark">Enrol Now</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-
+    </div>
+    <!--header navigation section ended-->
 </body>
 
 </html>
