Corrected the Alignment of SignUp label

--- a/intex.html
+++ b/intex.html
@@ -25,7 +25,7 @@
                 <header class="header">
                     <div class="header__top-row">
                         <img src="/images/Logo.svg" alt="Header Logo" class="header__logo" />
-                        <div class="heaer-actions">
+                        <div class="header__actions">
                             <p class="header__signup ui text size-textxs">Sign UP |</p>
                             <button class="header__login-button ui button gray_500 size-xs fill">Login</button>
                             <img src="/images/edgeLogo.svg" alt="Logo 24 1" class="header__user-icon" />
