Corrected Menu UI Text Color for Heading Text

--- a/intex.html
+++ b/intex.html
@@ -37,34 +37,34 @@
                                 <li>
                                     <a href="#">
                                         <div class="header__menu-item">
-                                            <p class="header__menu-link ui heading size-headingxs">Home</p>
+                                            <p class="header-menu-headingxs">Home</p>
                                             <div class="header__menu-indicator"></div>
                                         </div>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <p class="header__menu-link ui text size-textxs">Gallery</p>
+                                        <p class="header-menu-heading">Gallery</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <p class="header__menu-link ui text size-textxs">Offer & Promotions</p>
+                                        <p class="header-menu-heading">Offer & Promotions</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <p class="header__menu-link ui text size-textxs">Webinar & Workshopes</p>
+                                        <p class="header-menu-heading">Webinar & Workshopes</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <p class="header__menu-link ui text size-textxs">Register your product</p>
+                                        <p class="header-menu-heading">Register your product</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <p class="header__menu-link ui text size-textxs">Know your Warranty</p>
+                                        <p class="header-menu-heading">Know your Warranty</p>
                                     </a>
                                 </li>
                                 <li class="dhi-group">
