Rename the Body Containers Div

--- a/intex.html
+++ b/intex.html
@@ -18,8 +18,8 @@
 
 <body>
     <script src="main.js"></script>
-    <div class="group-278">
-        <div class="group-267">
+    <div class="body-main-container">
+        <div class="body-inner-container">
             <!--header navigation section started-->
             <div>
                 <header class="header">
