Added HTML for Hero Slider Section

--- a/intex.html
+++ b/intex.html
@@ -138,6 +138,56 @@
         </div>
     </div>
     <!--header navigation section ended-->
+
+    <!--hero section started-->
+    <div class="frame-1000004694">
+        <div class="component-11">
+            <!-- hero slider section-->
+            <div class="group-1000004977">
+                <div class="group-8">
+                    <div class="section-3">
+                        <div class="section__content-3">
+                            <div id="slider" class="slider swiper">
+                                <div class="swiper-wrapper">
+                                    <div class="slider__item swiper-slide container-xs">
+                                        <div class="product-registration">
+                                            <h1 class="product-registration__title ui heading size-heading6xl">Register
+                                                Your Products</h1>
+                                            <button
+                                                class="product-registration__button ui button deep_orange_a700_01 size-sm fill round">
+                                                <span>Register Now</span>
+                                                <div class="right-icon-wrapper">
+                                                    <img src="/images/directionArrow.svg" alt="Direction Arrow"
+                                                        class="arrow_left" />
+                                                </div>
+                                            </button>
+                                            <img src="/images/Product_1.svg" alt="Product 1"
+                                                class="product-registration__image" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider-controls">
+                                <button class="slider-controls__previous ui button white_a700_01 size-lg fill circle"
+                                    id="slider-control-prev">
+                                    <img src="/images/rightArrow.svg" alt="Right Arrow" />
+                                </button>
+                                <button class="slider-controls__next ui button white_a700_01 size-lg fill circle"
+                                    id="slider-control-next">
+                                    <img src="/images/rightArrow.svg" alt="Right Arrow" />
+                                </button>
+                            </div>
+                        </div>
+                        <div class="pager-indicator-wrapper contanier-xs">
+                            <div id="slider-pagination" class="pager-indicator-wrapper__indicator"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!--hero section endeded-->
 </body>
 
 </html>
