Fixes the UI issues

--- a/intex.html
+++ b/intex.html
@@ -170,7 +170,7 @@
                             <div class="slider-controls">
                                 <button class="slider-controls__previous ui button white_a700_01 size-lg fill circle"
                                     id="slider-control-prev">
-                                    <img src="/images/rightArrow.svg" alt="Right Arrow" />
+                                    <img src="/images/rightArrow.svg" alt="Left Arrow" />
                                 </button>
                                 <button class="slider-controls__next ui button white_a700_01 size-lg fill circle"
                                     id="slider-control-next">
