--- a/intex.html
+++ b/intex.html
@@ -11,13 +11,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/swiper@11.0.6/swiper/swiper.min.css" rel="stylesheet" type="text/css">
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11.0.6/swiper/swiper-bundle.min.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+        rel="stylesheet" type="text/css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </head>
 
 <body>
-    <script src="main.js"></script>
+
     <div class="body-main-container">
         <div class="body-inner-container">
             <!--header navigation section started-->
