Added the Slider related code in to seperate file

--- a/intex.html
+++ b/intex.html
@@ -20,6 +20,7 @@
 
 <body>
 
+
     <div class="body-main-container">
         <div class="body-inner-container">
             <!--header navigation section started-->
@@ -151,7 +152,7 @@
                         <div class="section__content-3">
                             <div id="slider" class="slider swiper">
                                 <div class="swiper-wrapper">
-                                    <div class="slider__item swiper-slide container-xs">
+                                    <div class="slider__item-swiper-slide container-xs">
                                         <div class="product-registration">
                                             <h1 class="product-registration__title ui heading size-heading6xl">Register
                                                 Your Products</h1>
